Parser.automaton
State 0:
## Known stack suffix:
##
## LR(1) items:
main' -> . main [ # ]
## Transitions:
-- On SET shift to state 1
-- On REAL_TYP shift to state 78
-- On PRINT shift to state 79
-- On PIXEL shift to state 83
-- On LT shift to state 84
-- On LIST shift to state 85
-- On INT_TYP shift to state 87
-- On IF shift to state 98
-- On FOREACH shift to state 102
-- On FOR shift to state 106
-- On EOF shift to state 136
-- On DRAW shift to state 114
-- On COORD shift to state 88
-- On COLOR shift to state 89
-- On BOOL shift to state 90
-- On BLOCKSTART shift to state 118
-- On type_expression shift to state 119
-- On statement shift to state 137
-- On program shift to state 138
-- On main shift to state 140
## Reductions:
-- On EOF
--   reduce production statement ->
** Conflict on EOF

State 1:
## Known stack suffix:
## SET
## LR(1) items:
statement -> SET . LPAREN expression COMMA expression RPAREN [ SEMICOLON EOF ELSE BLOCKEND ]
## Transitions:
-- On LPAREN shift to state 2
## Reductions:

State 2:
## Known stack suffix:
## SET LPAREN
## LR(1) items:
statement -> SET LPAREN . expression COMMA expression RPAREN [ SEMICOLON EOF ELSE BLOCKEND ]
## Transitions:
-- On TRUE shift to state 3
-- On TAIL shift to state 4
-- On SIN shift to state 5
-- On REAL_OF_INT shift to state 6
-- On REAL shift to state 7
-- On PIXEL shift to state 8
-- On PI shift to state 10
-- On NOT shift to state 11
-- On MINUS shift to state 12
-- On LPAREN shift to state 13
-- On LBRACKET shift to state 14
-- On INT shift to state 15
-- On ID shift to state 16
-- On HEAD shift to state 17
-- On FLOOR shift to state 18
-- On FALSE shift to state 19
-- On COS shift to state 20
-- On COORD shift to state 21
-- On COLOR shift to state 23
-- On unary_operator shift to state 25
-- On expression shift to state 74
## Reductions:

State 3:
## Known stack suffix:
## TRUE
## LR(1) items:
expression -> TRUE . [ TO TIMES STEP SET SEMICOLON RPAREN REM REAL_TYP RBRACKET PRINT PLUS PIXEL OR MINUS LT LIST LEQ INT_TYP IF GT GEQ FOREACH FOR EQ EOF ELSE DRAW DOUBLECOLON DOT DIV DIFF COORD COMMA COLOR BOOL BLOCKSTART BLOCKEND AND ]
## Transitions:
## Reductions:
-- On TO TIMES STEP SET SEMICOLON RPAREN REM REAL_TYP RBRACKET PRINT PLUS PIXEL OR MINUS LT LIST LEQ INT_TYP IF GT GEQ FOREACH FOR EQ EOF ELSE DRAW DOUBLECOLON DOT DIV DIFF COORD COMMA COLOR BOOL BLOCKSTART BLOCKEND AND
--   reduce production expression -> TRUE

State 4:
## Known stack suffix:
## TAIL
## LR(1) items:
unary_operator -> TAIL . [ TRUE TAIL SIN REAL_OF_INT REAL PIXEL PI NOT MINUS LPAREN LBRACKET INT ID HEAD FLOOR FALSE COS COORD COLOR ]
## Transitions:
## Reductions:
-- On TRUE TAIL SIN REAL_OF_INT REAL PIXEL PI NOT MINUS LPAREN LBRACKET INT ID HEAD FLOOR FALSE COS COORD COLOR
--   reduce production unary_operator -> TAIL

State 5:
## Known stack suffix:
## SIN
## LR(1) items:
unary_operator -> SIN . [ TRUE TAIL SIN REAL_OF_INT REAL PIXEL PI NOT MINUS LPAREN LBRACKET INT ID HEAD FLOOR FALSE COS COORD COLOR ]
## Transitions:
## Reductions:
-- On TRUE TAIL SIN REAL_OF_INT REAL PIXEL PI NOT MINUS LPAREN LBRACKET INT ID HEAD FLOOR FALSE COS COORD COLOR
--   reduce production unary_operator -> SIN

State 6:
## Known stack suffix:
## REAL_OF_INT
## LR(1) items:
unary_operator -> REAL_OF_INT . [ TRUE TAIL SIN REAL_OF_INT REAL PIXEL PI NOT MINUS LPAREN LBRACKET INT ID HEAD FLOOR FALSE COS COORD COLOR ]
## Transitions:
## Reductions:
-- On TRUE TAIL SIN REAL_OF_INT REAL PIXEL PI NOT MINUS LPAREN LBRACKET INT ID HEAD FLOOR FALSE COS COORD COLOR
--   reduce production unary_operator -> REAL_OF_INT

State 7:
## Known stack suffix:
## REAL
## LR(1) items:
expression -> REAL . [ TO TIMES STEP SET SEMICOLON RPAREN REM REAL_TYP RBRACKET PRINT PLUS PIXEL OR MINUS LT LIST LEQ INT_TYP IF GT GEQ FOREACH FOR EQ EOF ELSE DRAW DOUBLECOLON DOT DIV DIFF COORD COMMA COLOR BOOL BLOCKSTART BLOCKEND AND ]
## Transitions:
## Reductions:
-- On TO TIMES STEP SET SEMICOLON RPAREN REM REAL_TYP RBRACKET PRINT PLUS PIXEL OR MINUS LT LIST LEQ INT_TYP IF GT GEQ FOREACH FOR EQ EOF ELSE DRAW DOUBLECOLON DOT DIV DIFF COORD COMMA COLOR BOOL BLOCKSTART BLOCKEND AND
--   reduce production expression -> REAL

State 8:
## Known stack suffix:
## PIXEL
## LR(1) items:
expression -> PIXEL . LPAREN expression COMMA expression RPAREN [ TO TIMES STEP SET SEMICOLON RPAREN REM REAL_TYP RBRACKET PRINT PLUS PIXEL OR MINUS LT LIST LEQ INT_TYP IF GT GEQ FOREACH FOR EQ EOF ELSE DRAW DOUBLECOLON DOT DIV DIFF COORD COMMA COLOR BOOL BLOCKSTART BLOCKEND AND ]
## Transitions:
-- On LPAREN shift to state 9
## Reductions:

State 9:
## Known stack suffix:
## PIXEL LPAREN
## LR(1) items:
expression -> PIXEL LPAREN . expression COMMA expression RPAREN [ TO TIMES STEP SET SEMICOLON RPAREN REM REAL_TYP RBRACKET PRINT PLUS PIXEL OR MINUS LT LIST LEQ INT_TYP IF GT GEQ FOREACH FOR EQ EOF ELSE DRAW DOUBLECOLON DOT DIV DIFF COORD COMMA COLOR BOOL BLOCKSTART BLOCKEND AND ]
## Transitions:
-- On TRUE shift to state 3
-- On TAIL shift to state 4
-- On SIN shift to state 5
-- On REAL_OF_INT shift to state 6
-- On REAL shift to state 7
-- On PIXEL shift to state 8
-- On PI shift to state 10
-- On NOT shift to state 11
-- On MINUS shift to state 12
-- On LPAREN shift to state 13
-- On LBRACKET shift to state 14
-- On INT shift to state 15
-- On ID shift to state 16
-- On HEAD shift to state 17
-- On FLOOR shift to state 18
-- On FALSE shift to state 19
-- On COS shift to state 20
-- On COORD shift to state 21
-- On COLOR shift to state 23
-- On unary_operator shift to state 25
-- On expression shift to state 70
## Reductions:

State 10:
## Known stack suffix:
## PI
## LR(1) items:
expression -> PI . [ TO TIMES STEP SET SEMICOLON RPAREN REM REAL_TYP RBRACKET PRINT PLUS PIXEL OR MINUS LT LIST LEQ INT_TYP IF GT GEQ FOREACH FOR EQ EOF ELSE DRAW DOUBLECOLON DOT DIV DIFF COORD COMMA COLOR BOOL BLOCKSTART BLOCKEND AND ]
## Transitions:
## Reductions:
-- On TO TIMES STEP SET SEMICOLON RPAREN REM REAL_TYP RBRACKET PRINT PLUS PIXEL OR MINUS LT LIST LEQ INT_TYP IF GT GEQ FOREACH FOR EQ EOF ELSE DRAW DOUBLECOLON DOT DIV DIFF COORD COMMA COLOR BOOL BLOCKSTART BLOCKEND AND
--   reduce production expression -> PI

State 11:
## Known stack suffix:
## NOT
## LR(1) items:
unary_operator -> NOT . [ TRUE TAIL SIN REAL_OF_INT REAL PIXEL PI NOT MINUS LPAREN LBRACKET INT ID HEAD FLOOR FALSE COS COORD COLOR ]
## Transitions:
## Reductions:
-- On TRUE TAIL SIN REAL_OF_INT REAL PIXEL PI NOT MINUS LPAREN LBRACKET INT ID HEAD FLOOR FALSE COS COORD COLOR
--   reduce production unary_operator -> NOT

State 12:
## Known stack suffix:
## MINUS
## LR(1) items:
unary_operator -> MINUS . [ TRUE TAIL SIN REAL_OF_INT REAL PIXEL PI NOT MINUS LPAREN LBRACKET INT ID HEAD FLOOR FALSE COS COORD COLOR ]
## Transitions:
## Reductions:
-- On TRUE TAIL SIN REAL_OF_INT REAL PIXEL PI NOT MINUS LPAREN LBRACKET INT ID HEAD FLOOR FALSE COS COORD COLOR
--   reduce production unary_operator -> MINUS

State 13:
## Known stack suffix:
## LPAREN
## LR(1) items:
expression -> LPAREN . expression RPAREN [ TO TIMES STEP SET SEMICOLON RPAREN REM REAL_TYP RBRACKET PRINT PLUS PIXEL OR MINUS LT LIST LEQ INT_TYP IF GT GEQ FOREACH FOR EQ EOF ELSE DRAW DOUBLECOLON DOT DIV DIFF COORD COMMA COLOR BOOL BLOCKSTART BLOCKEND AND ]
## Transitions:
-- On TRUE shift to state 3
-- On TAIL shift to state 4
-- On SIN shift to state 5
-- On REAL_OF_INT shift to state 6
-- On REAL shift to state 7
-- On PIXEL shift to state 8
-- On PI shift to state 10
-- On NOT shift to state 11
-- On MINUS shift to state 12
-- On LPAREN shift to state 13
-- On LBRACKET shift to state 14
-- On INT shift to state 15
-- On ID shift to state 16
-- On HEAD shift to state 17
-- On FLOOR shift to state 18
-- On FALSE shift to state 19
-- On COS shift to state 20
-- On COORD shift to state 21
-- On COLOR shift to state 23
-- On unary_operator shift to state 25
-- On expression shift to state 68
## Reductions:

State 14:
## Known stack suffix:
## LBRACKET
## LR(1) items:
expression -> LBRACKET . expression_list RBRACKET [ TO TIMES STEP SET SEMICOLON RPAREN REM REAL_TYP RBRACKET PRINT PLUS PIXEL OR MINUS LT LIST LEQ INT_TYP IF GT GEQ FOREACH FOR EQ EOF ELSE DRAW DOUBLECOLON DOT DIV DIFF COORD COMMA COLOR BOOL BLOCKSTART BLOCKEND AND ]
## Transitions:
-- On TRUE shift to state 3
-- On TAIL shift to state 4
-- On SIN shift to state 5
-- On REAL_OF_INT shift to state 6
-- On REAL shift to state 7
-- On PIXEL shift to state 8
-- On PI shift to state 10
-- On NOT shift to state 11
-- On MINUS shift to state 12
-- On LPAREN shift to state 13
-- On LBRACKET shift to state 14
-- On INT shift to state 15
-- On ID shift to state 16
-- On HEAD shift to state 17
-- On FLOOR shift to state 18
-- On FALSE shift to state 19
-- On COS shift to state 20
-- On COORD shift to state 21
-- On COLOR shift to state 23
-- On unary_operator shift to state 25
-- On expression_list shift to state 63
-- On expression shift to state 65
## Reductions:
-- On RBRACKET
--   reduce production expression_list ->

State 15:
## Known stack suffix:
## INT
## LR(1) items:
expression -> INT . [ TO TIMES STEP SET SEMICOLON RPAREN REM REAL_TYP RBRACKET PRINT PLUS PIXEL OR MINUS LT LIST LEQ INT_TYP IF GT GEQ FOREACH FOR EQ EOF ELSE DRAW DOUBLECOLON DOT DIV DIFF COORD COMMA COLOR BOOL BLOCKSTART BLOCKEND AND ]
## Transitions:
## Reductions:
-- On TO TIMES STEP SET SEMICOLON RPAREN REM REAL_TYP RBRACKET PRINT PLUS PIXEL OR MINUS LT LIST LEQ INT_TYP IF GT GEQ FOREACH FOR EQ EOF ELSE DRAW DOUBLECOLON DOT DIV DIFF COORD COMMA COLOR BOOL BLOCKSTART BLOCKEND AND
--   reduce production expression -> INT

State 16:
## Known stack suffix:
## ID
## LR(1) items:
expression -> ID . [ TO TIMES STEP SET SEMICOLON RPAREN REM REAL_TYP RBRACKET PRINT PLUS PIXEL OR MINUS LT LIST LEQ INT_TYP IF GT GEQ FOREACH FOR EQ EOF ELSE DRAW DOUBLECOLON DOT DIV DIFF COORD COMMA COLOR BOOL BLOCKSTART BLOCKEND AND ]
## Transitions:
## Reductions:
-- On TO TIMES STEP SET SEMICOLON RPAREN REM REAL_TYP RBRACKET PRINT PLUS PIXEL OR MINUS LT LIST LEQ INT_TYP IF GT GEQ FOREACH FOR EQ EOF ELSE DRAW DOUBLECOLON DOT DIV DIFF COORD COMMA COLOR BOOL BLOCKSTART BLOCKEND AND
--   reduce production expression -> ID

State 17:
## Known stack suffix:
## HEAD
## LR(1) items:
unary_operator -> HEAD . [ TRUE TAIL SIN REAL_OF_INT REAL PIXEL PI NOT MINUS LPAREN LBRACKET INT ID HEAD FLOOR FALSE COS COORD COLOR ]
## Transitions:
## Reductions:
-- On TRUE TAIL SIN REAL_OF_INT REAL PIXEL PI NOT MINUS LPAREN LBRACKET INT ID HEAD FLOOR FALSE COS COORD COLOR
--   reduce production unary_operator -> HEAD

State 18:
## Known stack suffix:
## FLOOR
## LR(1) items:
unary_operator -> FLOOR . [ TRUE TAIL SIN REAL_OF_INT REAL PIXEL PI NOT MINUS LPAREN LBRACKET INT ID HEAD FLOOR FALSE COS COORD COLOR ]
## Transitions:
## Reductions:
-- On TRUE TAIL SIN REAL_OF_INT REAL PIXEL PI NOT MINUS LPAREN LBRACKET INT ID HEAD FLOOR FALSE COS COORD COLOR
--   reduce production unary_operator -> FLOOR

State 19:
## Known stack suffix:
## FALSE
## LR(1) items:
expression -> FALSE . [ TO TIMES STEP SET SEMICOLON RPAREN REM REAL_TYP RBRACKET PRINT PLUS PIXEL OR MINUS LT LIST LEQ INT_TYP IF GT GEQ FOREACH FOR EQ EOF ELSE DRAW DOUBLECOLON DOT DIV DIFF COORD COMMA COLOR BOOL BLOCKSTART BLOCKEND AND ]
## Transitions:
## Reductions:
-- On TO TIMES STEP SET SEMICOLON RPAREN REM REAL_TYP RBRACKET PRINT PLUS PIXEL OR MINUS LT LIST LEQ INT_TYP IF GT GEQ FOREACH FOR EQ EOF ELSE DRAW DOUBLECOLON DOT DIV DIFF COORD COMMA COLOR BOOL BLOCKSTART BLOCKEND AND
--   reduce production expression -> FALSE

State 20:
## Known stack suffix:
## COS
## LR(1) items:
unary_operator -> COS . [ TRUE TAIL SIN REAL_OF_INT REAL PIXEL PI NOT MINUS LPAREN LBRACKET INT ID HEAD FLOOR FALSE COS COORD COLOR ]
## Transitions:
## Reductions:
-- On TRUE TAIL SIN REAL_OF_INT REAL PIXEL PI NOT MINUS LPAREN LBRACKET INT ID HEAD FLOOR FALSE COS COORD COLOR
--   reduce production unary_operator -> COS

State 21:
## Known stack suffix:
## COORD
## LR(1) items:
expression -> COORD . LPAREN expression COMMA expression RPAREN [ TO TIMES STEP SET SEMICOLON RPAREN REM REAL_TYP RBRACKET PRINT PLUS PIXEL OR MINUS LT LIST LEQ INT_TYP IF GT GEQ FOREACH FOR EQ EOF ELSE DRAW DOUBLECOLON DOT DIV DIFF COORD COMMA COLOR BOOL BLOCKSTART BLOCKEND AND ]
## Transitions:
-- On LPAREN shift to state 22
## Reductions:

State 22:
## Known stack suffix:
## COORD LPAREN
## LR(1) items:
expression -> COORD LPAREN . expression COMMA expression RPAREN [ TO TIMES STEP SET SEMICOLON RPAREN REM REAL_TYP RBRACKET PRINT PLUS PIXEL OR MINUS LT LIST LEQ INT_TYP IF GT GEQ FOREACH FOR EQ EOF ELSE DRAW DOUBLECOLON DOT DIV DIFF COORD COMMA COLOR BOOL BLOCKSTART BLOCKEND AND ]
## Transitions:
-- On TRUE shift to state 3
-- On TAIL shift to state 4
-- On SIN shift to state 5
-- On REAL_OF_INT shift to state 6
-- On REAL shift to state 7
-- On PIXEL shift to state 8
-- On PI shift to state 10
-- On NOT shift to state 11
-- On MINUS shift to state 12
-- On LPAREN shift to state 13
-- On LBRACKET shift to state 14
-- On INT shift to state 15
-- On ID shift to state 16
-- On HEAD shift to state 17
-- On FLOOR shift to state 18
-- On FALSE shift to state 19
-- On COS shift to state 20
-- On COORD shift to state 21
-- On COLOR shift to state 23
-- On unary_operator shift to state 25
-- On expression shift to state 59
## Reductions:

State 23:
## Known stack suffix:
## COLOR
## LR(1) items:
expression -> COLOR . LPAREN expression COMMA expression COMMA expression RPAREN [ TO TIMES STEP SET SEMICOLON RPAREN REM REAL_TYP RBRACKET PRINT PLUS PIXEL OR MINUS LT LIST LEQ INT_TYP IF GT GEQ FOREACH FOR EQ EOF ELSE DRAW DOUBLECOLON DOT DIV DIFF COORD COMMA COLOR BOOL BLOCKSTART BLOCKEND AND ]
## Transitions:
-- On LPAREN shift to state 24
## Reductions:

State 24:
## Known stack suffix:
## COLOR LPAREN
## LR(1) items:
expression -> COLOR LPAREN . expression COMMA expression COMMA expression RPAREN [ TO TIMES STEP SET SEMICOLON RPAREN REM REAL_TYP RBRACKET PRINT PLUS PIXEL OR MINUS LT LIST LEQ INT_TYP IF GT GEQ FOREACH FOR EQ EOF ELSE DRAW DOUBLECOLON DOT DIV DIFF COORD COMMA COLOR BOOL BLOCKSTART BLOCKEND AND ]
## Transitions:
-- On TRUE shift to state 3
-- On TAIL shift to state 4
-- On SIN shift to state 5
-- On REAL_OF_INT shift to state 6
-- On REAL shift to state 7
-- On PIXEL shift to state 8
-- On PI shift to state 10
-- On NOT shift to state 11
-- On MINUS shift to state 12
-- On LPAREN shift to state 13
-- On LBRACKET shift to state 14
-- On INT shift to state 15
-- On ID shift to state 16
-- On HEAD shift to state 17
-- On FLOOR shift to state 18
-- On FALSE shift to state 19
-- On COS shift to state 20
-- On COORD shift to state 21
-- On COLOR shift to state 23
-- On unary_operator shift to state 25
-- On expression shift to state 53
## Reductions:

State 25:
## Known stack suffix:
## unary_operator
## LR(1) items:
expression -> unary_operator . expression [ TO TIMES STEP SET SEMICOLON RPAREN REM REAL_TYP RBRACKET PRINT PLUS PIXEL OR MINUS LT LIST LEQ INT_TYP IF GT GEQ FOREACH FOR EQ EOF ELSE DRAW DOUBLECOLON DOT DIV DIFF COORD COMMA COLOR BOOL BLOCKSTART BLOCKEND AND ]
## Transitions:
-- On TRUE shift to state 3
-- On TAIL shift to state 4
-- On SIN shift to state 5
-- On REAL_OF_INT shift to state 6
-- On REAL shift to state 7
-- On PIXEL shift to state 8
-- On PI shift to state 10
-- On NOT shift to state 11
-- On MINUS shift to state 12
-- On LPAREN shift to state 13
-- On LBRACKET shift to state 14
-- On INT shift to state 15
-- On ID shift to state 16
-- On HEAD shift to state 17
-- On FLOOR shift to state 18
-- On FALSE shift to state 19
-- On COS shift to state 20
-- On COORD shift to state 21
-- On COLOR shift to state 23
-- On unary_operator shift to state 25
-- On expression shift to state 26
## Reductions:

State 26:
## Known stack suffix:
## unary_operator expression
## LR(1) items:
expression -> expression . binary_operator expression [ TO TIMES STEP SET SEMICOLON RPAREN REM REAL_TYP RBRACKET PRINT PLUS PIXEL OR MINUS LT LIST LEQ INT_TYP IF GT GEQ FOREACH FOR EQ EOF ELSE DRAW DOUBLECOLON DOT DIV DIFF COORD COMMA COLOR BOOL BLOCKSTART BLOCKEND AND ]
expression -> unary_operator expression . [ TO TIMES STEP SET SEMICOLON RPAREN REM REAL_TYP RBRACKET PRINT PLUS PIXEL OR MINUS LT LIST LEQ INT_TYP IF GT GEQ FOREACH FOR EQ EOF ELSE DRAW DOUBLECOLON DOT DIV DIFF COORD COMMA COLOR BOOL BLOCKSTART BLOCKEND AND ]
expression -> expression . DOT field_accessor [ TO TIMES STEP SET SEMICOLON RPAREN REM REAL_TYP RBRACKET PRINT PLUS PIXEL OR MINUS LT LIST LEQ INT_TYP IF GT GEQ FOREACH FOR EQ EOF ELSE DRAW DOUBLECOLON DOT DIV DIFF COORD COMMA COLOR BOOL BLOCKSTART BLOCKEND AND ]
expression -> expression . DOUBLECOLON expression [ TO TIMES STEP SET SEMICOLON RPAREN REM REAL_TYP RBRACKET PRINT PLUS PIXEL OR MINUS LT LIST LEQ INT_TYP IF GT GEQ FOREACH FOR EQ EOF ELSE DRAW DOUBLECOLON DOT DIV DIFF COORD COMMA COLOR BOOL BLOCKSTART BLOCKEND AND ]
## Transitions:
-- On TIMES shift to state 27
-- On REM shift to state 28
-- On PLUS shift to state 29
-- On OR shift to state 30
-- On MINUS shift to state 31
-- On LT shift to state 32
-- On LEQ shift to state 33
-- On GT shift to state 34
-- On GEQ shift to state 35
-- On EQ shift to state 36
-- On DOUBLECOLON shift to state 37
-- On DOT shift to state 41
-- On DIV shift to state 50
-- On DIFF shift to state 51
-- On AND shift to state 52
-- On binary_operator shift to state 39
## Reductions:
-- On TO TIMES STEP SET SEMICOLON RPAREN REM REAL_TYP RBRACKET PRINT PLUS PIXEL OR MINUS LT LIST LEQ INT_TYP IF GT GEQ FOREACH FOR EQ EOF ELSE DRAW DOUBLECOLON DOT DIV DIFF COORD COMMA COLOR BOOL BLOCKSTART BLOCKEND AND
--   reduce production expression -> unary_operator expression
** Conflict on TIMES REM PLUS OR MINUS LT LEQ GT GEQ EQ DOUBLECOLON DOT DIV DIFF AND

State 27:
## Known stack suffix:
## TIMES
## LR(1) items:
binary_operator -> TIMES . [ TRUE TAIL SIN REAL_OF_INT REAL PIXEL PI NOT MINUS LPAREN LBRACKET INT ID HEAD FLOOR FALSE COS COORD COLOR ]
## Transitions:
## Reductions:
-- On TRUE TAIL SIN REAL_OF_INT REAL PIXEL PI NOT MINUS LPAREN LBRACKET INT ID HEAD FLOOR FALSE COS COORD COLOR
--   reduce production binary_operator -> TIMES

State 28:
## Known stack suffix:
## REM
## LR(1) items:
binary_operator -> REM . [ TRUE TAIL SIN REAL_OF_INT REAL PIXEL PI NOT MINUS LPAREN LBRACKET INT ID HEAD FLOOR FALSE COS COORD COLOR ]
## Transitions:
## Reductions:
-- On TRUE TAIL SIN REAL_OF_INT REAL PIXEL PI NOT MINUS LPAREN LBRACKET INT ID HEAD FLOOR FALSE COS COORD COLOR
--   reduce production binary_operator -> REM

State 29:
## Known stack suffix:
## PLUS
## LR(1) items:
binary_operator -> PLUS . [ TRUE TAIL SIN REAL_OF_INT REAL PIXEL PI NOT MINUS LPAREN LBRACKET INT ID HEAD FLOOR FALSE COS COORD COLOR ]
## Transitions:
## Reductions:
-- On TRUE TAIL SIN REAL_OF_INT REAL PIXEL PI NOT MINUS LPAREN LBRACKET INT ID HEAD FLOOR FALSE COS COORD COLOR
--   reduce production binary_operator -> PLUS

State 30:
## Known stack suffix:
## OR
## LR(1) items:
binary_operator -> OR . [ TRUE TAIL SIN REAL_OF_INT REAL PIXEL PI NOT MINUS LPAREN LBRACKET INT ID HEAD FLOOR FALSE COS COORD COLOR ]
## Transitions:
## Reductions:
-- On TRUE TAIL SIN REAL_OF_INT REAL PIXEL PI NOT MINUS LPAREN LBRACKET INT ID HEAD FLOOR FALSE COS COORD COLOR
--   reduce production binary_operator -> OR

State 31:
## Known stack suffix:
## MINUS
## LR(1) items:
binary_operator -> MINUS . [ TRUE TAIL SIN REAL_OF_INT REAL PIXEL PI NOT MINUS LPAREN LBRACKET INT ID HEAD FLOOR FALSE COS COORD COLOR ]
## Transitions:
## Reductions:
-- On TRUE TAIL SIN REAL_OF_INT REAL PIXEL PI NOT MINUS LPAREN LBRACKET INT ID HEAD FLOOR FALSE COS COORD COLOR
--   reduce production binary_operator -> MINUS

State 32:
## Known stack suffix:
## LT
## LR(1) items:
binary_operator -> LT . [ TRUE TAIL SIN REAL_OF_INT REAL PIXEL PI NOT MINUS LPAREN LBRACKET INT ID HEAD FLOOR FALSE COS COORD COLOR ]
## Transitions:
## Reductions:
-- On TRUE TAIL SIN REAL_OF_INT REAL PIXEL PI NOT MINUS LPAREN LBRACKET INT ID HEAD FLOOR FALSE COS COORD COLOR
--   reduce production binary_operator -> LT

State 33:
## Known stack suffix:
## LEQ
## LR(1) items:
binary_operator -> LEQ . [ TRUE TAIL SIN REAL_OF_INT REAL PIXEL PI NOT MINUS LPAREN LBRACKET INT ID HEAD FLOOR FALSE COS COORD COLOR ]
## Transitions:
## Reductions:
-- On TRUE TAIL SIN REAL_OF_INT REAL PIXEL PI NOT MINUS LPAREN LBRACKET INT ID HEAD FLOOR FALSE COS COORD COLOR
--   reduce production binary_operator -> LEQ

State 34:
## Known stack suffix:
## GT
## LR(1) items:
binary_operator -> GT . [ TRUE TAIL SIN REAL_OF_INT REAL PIXEL PI NOT MINUS LPAREN LBRACKET INT ID HEAD FLOOR FALSE COS COORD COLOR ]
## Transitions:
## Reductions:
-- On TRUE TAIL SIN REAL_OF_INT REAL PIXEL PI NOT MINUS LPAREN LBRACKET INT ID HEAD FLOOR FALSE COS COORD COLOR
--   reduce production binary_operator -> GT

State 35:
## Known stack suffix:
## GEQ
## LR(1) items:
binary_operator -> GEQ . [ TRUE TAIL SIN REAL_OF_INT REAL PIXEL PI NOT MINUS LPAREN LBRACKET INT ID HEAD FLOOR FALSE COS COORD COLOR ]
## Transitions:
## Reductions:
-- On TRUE TAIL SIN REAL_OF_INT REAL PIXEL PI NOT MINUS LPAREN LBRACKET INT ID HEAD FLOOR FALSE COS COORD COLOR
--   reduce production binary_operator -> GEQ

State 36:
## Known stack suffix:
## EQ
## LR(1) items:
binary_operator -> EQ . [ TRUE TAIL SIN REAL_OF_INT REAL PIXEL PI NOT MINUS LPAREN LBRACKET INT ID HEAD FLOOR FALSE COS COORD COLOR ]
## Transitions:
## Reductions:
-- On TRUE TAIL SIN REAL_OF_INT REAL PIXEL PI NOT MINUS LPAREN LBRACKET INT ID HEAD FLOOR FALSE COS COORD COLOR
--   reduce production binary_operator -> EQ

State 37:
## Known stack suffix:
## expression DOUBLECOLON
## LR(1) items:
expression -> expression DOUBLECOLON . expression [ TO TIMES STEP SET SEMICOLON RPAREN REM REAL_TYP RBRACKET PRINT PLUS PIXEL OR MINUS LT LIST LEQ INT_TYP IF GT GEQ FOREACH FOR EQ EOF ELSE DRAW DOUBLECOLON DOT DIV DIFF COORD COMMA COLOR BOOL BLOCKSTART BLOCKEND AND ]
## Transitions:
-- On TRUE shift to state 3
-- On TAIL shift to state 4
-- On SIN shift to state 5
-- On REAL_OF_INT shift to state 6
-- On REAL shift to state 7
-- On PIXEL shift to state 8
-- On PI shift to state 10
-- On NOT shift to state 11
-- On MINUS shift to state 12
-- On LPAREN shift to state 13
-- On LBRACKET shift to state 14
-- On INT shift to state 15
-- On ID shift to state 16
-- On HEAD shift to state 17
-- On FLOOR shift to state 18
-- On FALSE shift to state 19
-- On COS shift to state 20
-- On COORD shift to state 21
-- On COLOR shift to state 23
-- On unary_operator shift to state 25
-- On expression shift to state 38
## Reductions:

State 38:
## Known stack suffix:
## expression DOUBLECOLON expression
## LR(1) items:
expression -> expression . binary_operator expression [ TO TIMES STEP SET SEMICOLON RPAREN REM REAL_TYP RBRACKET PRINT PLUS PIXEL OR MINUS LT LIST LEQ INT_TYP IF GT GEQ FOREACH FOR EQ EOF ELSE DRAW DOUBLECOLON DOT DIV DIFF COORD COMMA COLOR BOOL BLOCKSTART BLOCKEND AND ]
expression -> expression . DOT field_accessor [ TO TIMES STEP SET SEMICOLON RPAREN REM REAL_TYP RBRACKET PRINT PLUS PIXEL OR MINUS LT LIST LEQ INT_TYP IF GT GEQ FOREACH FOR EQ EOF ELSE DRAW DOUBLECOLON DOT DIV DIFF COORD COMMA COLOR BOOL BLOCKSTART BLOCKEND AND ]
expression -> expression . DOUBLECOLON expression [ TO TIMES STEP SET SEMICOLON RPAREN REM REAL_TYP RBRACKET PRINT PLUS PIXEL OR MINUS LT LIST LEQ INT_TYP IF GT GEQ FOREACH FOR EQ EOF ELSE DRAW DOUBLECOLON DOT DIV DIFF COORD COMMA COLOR BOOL BLOCKSTART BLOCKEND AND ]
expression -> expression DOUBLECOLON expression . [ TO TIMES STEP SET SEMICOLON RPAREN REM REAL_TYP RBRACKET PRINT PLUS PIXEL OR MINUS LT LIST LEQ INT_TYP IF GT GEQ FOREACH FOR EQ EOF ELSE DRAW DOUBLECOLON DOT DIV DIFF COORD COMMA COLOR BOOL BLOCKSTART BLOCKEND AND ]
## Transitions:
-- On DOUBLECOLON shift to state 37
-- On binary_operator shift to state 39
## Reductions:
-- On TO TIMES STEP SET SEMICOLON RPAREN REM REAL_TYP RBRACKET PRINT PLUS PIXEL OR MINUS LT LIST LEQ INT_TYP IF GT GEQ FOREACH FOR EQ EOF ELSE DRAW DOT DIV DIFF COORD COMMA COLOR BOOL BLOCKSTART BLOCKEND AND
--   reduce production expression -> expression DOUBLECOLON expression

State 39:
## Known stack suffix:
## expression binary_operator
## LR(1) items:
expression -> expression binary_operator . expression [ TO TIMES STEP SET SEMICOLON RPAREN REM REAL_TYP RBRACKET PRINT PLUS PIXEL OR MINUS LT LIST LEQ INT_TYP IF GT GEQ FOREACH FOR EQ EOF ELSE DRAW DOUBLECOLON DOT DIV DIFF COORD COMMA COLOR BOOL BLOCKSTART BLOCKEND AND ]
## Transitions:
-- On TRUE shift to state 3
-- On TAIL shift to state 4
-- On SIN shift to state 5
-- On REAL_OF_INT shift to state 6
-- On REAL shift to state 7
-- On PIXEL shift to state 8
-- On PI shift to state 10
-- On NOT shift to state 11
-- On MINUS shift to state 12
-- On LPAREN shift to state 13
-- On LBRACKET shift to state 14
-- On INT shift to state 15
-- On ID shift to state 16
-- On HEAD shift to state 17
-- On FLOOR shift to state 18
-- On FALSE shift to state 19
-- On COS shift to state 20
-- On COORD shift to state 21
-- On COLOR shift to state 23
-- On unary_operator shift to state 25
-- On expression shift to state 40
## Reductions:
